media query 450px for modal img. Ensure not too small on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -147,7 +147,10 @@
 }
 
 /* Responsive */
-@media screen and (max-width: ) {
+@media screen and (max-width: 450px) {
+  .modal__image {
+    max-width: 100vw;
+  }
 }
 
 @media screen and (max-width: 627px) {
